# apue-test

cp/: cp.c  (+1 more)
socket/amarok-2.1.1/po/: CMakeLists.txt
socket/amarok-2.1.1/po/bg/: amarok.po  amarokcollectionscanner_qt.po
socket/amarok-2.1.1/po/ca/: amarok.po  amarokcollectionscanner_qt.po
socket/amarok-2.1.1/po/cs/: amarok.po
socket/amarok-2.1.1/po/da/: amarok.po  amarokcollectionscanner_qt.po
socket/amarok-2.1.1/po/de/: amarok.po  amarokcollectionscanner_qt.po
socket/amarok-2.1.1/po/el/: amarok.po
socket/amarok-2.1.1/po/en_GB/: amarok.po  amarokcollectionscanner_qt.po
socket/amarok-2.1.1/po/es/: amarok.po  amarokcollectionscanner_qt.po
socket/amarok-2.1.1/po/et/: amarok.po  amarokcollectionscanner_qt.po
socket/amarok-2.1.1/po/eu/: amarok.po
socket/amarok-2.1.1/po/fi/: amarok.po
socket/amarok-2.1.1/po/fr/: amarok.po  amarokcollectionscanner_qt.po
socket/amarok-2.1.1/po/gl/: amarok.po  amarokcollectionscanner_qt.po
socket/amarok-2.1.1/po/he/: amarok.po
socket/amarok-2.1.1/po/is/: amarok.po
socket/amarok-2.1.1/po/it/: amarok.po  amarokcollectionscanner_qt.po
socket/amarok-2.1.1/po/ja/: amarok.po
socket/amarok-2.1.1/po/km/: amarok.po  amarokcollectionscanner_qt.po
socket/amarok-2.1.1/po/ku/: CMakeLists.txt  amarok.po
socket/amarok-2.1.1/po/lt/: amarok.po  amarokcollectionscanner_qt.po
socket/amarok-2.1.1/po/lv/: amarok.po
socket/amarok-2.1.1/po/nb/: amarok.po  amarokcollectionscanner_qt.po
socket/amarok-2.1.1/po/nds/: amarok.po  amarokcollectionscanner_qt.po
socket/amarok-2.1.1/po/nl/: amarok.po  amarokcollectionscanner_qt.po
(+240 files in other folders)
