find_package(Gettext REQUIRED)
if (NOT GETTEXT_MSGMERGE_EXECUTABLE)
MESSAGE(FATAL_ERROR "Please install msgmerge binary")
endif (NOT GETTEXT_MSGMERGE_EXECUTABLE)
if (NOT GETTEXT_MSGFMT_EXECUTABLE)
MESSAGE(FATAL_ERROR "Please install msgmerge binary")
endif (NOT GETTEXT_MSGFMT_EXECUTABLE)
add_subdirectory(nn)
add_subdirectory(lt)
add_subdirectory(fr)
add_subdirectory(he)
add_subdirectory(zh_TW)
add_subdirectory(is)
add_subdirectory(uk)
add_subdirectory(et)
add_subdirectory(de)
add_subdirectory(ro)
add_subdirectory(tr)
add_subdirectory(km)
add_subdirectory(ru)
add_subdirectory(ja)
add_subdirectory(bg)
add_subdirectory(cs)
add_subdirectory(sl)
add_subdirectory(eu)
add_subdirectory(pa)
add_subdirectory(th)
add_subdirectory(pt)
add_subdirectory(en_GB)
add_subdirectory(ca)
add_subdirectory(nl)
add_subdirectory(wa)
add_subdirectory(ku)
add_subdirectory(es)
add_subdirectory(sv)
add_subdirectory(fi)
add_subdirectory(el)
add_subdirectory(da)
add_subdirectory(lv)
add_subdirectory(it)
add_subdirectory(gl)
add_subdirectory(nb)
add_subdirectory(pl)
add_subdirectory(pt_BR)
add_subdirectory(nds)
